Fixed issue - Added overflow-y: hidden to manageHelpers div

--- a/public_records_portal/static/css/case.css
+++ b/public_records_portal/static/css/case.css
@@ -197,4 +197,4 @@ input[name=reason_unassigned] {
     padding: 0 20px; // Now only left & right padding
 }
 
-#notifyForm { overflow-x: hidden; overflow-y: hidden;}
+#manageHelpers { overflow-x: hidden; overflow-y: hidden;}
